Set font weight to 400 accross the whole UI to increase contrast.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
@@ -36,7 +36,9 @@
 .x-menu-item-text-default,
 .x-panel-body-default,
 .x-panel-header-title-default,
-.x-tree-node-text {
+.x-toolbar-text-default,
+.x-tree-node-text,
+.x-window-body-default {
 	font-weight: 400;
 }
 /******************************************************************************/
