Reduce padding to reduce the size of white space between the tree menu items.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
@@ -150,6 +150,10 @@ body > .x-mask {
 .x-grid-tree-node-expanded .x-tree-elbow-end-plus {
 	color: #000000;
 }
+.x-grid-cell-inner-treecolumn {
+	padding-top: 5px;
+	padding-bottom: 4px;
+}
 /******************************************************************************/
 /* Grid */
 .x-grid-item-focused .x-grid-cell-inner:before {
