Introduce CSS class for the header section.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -438,6 +438,10 @@ div#headerrlogo {
 	background-size: 16px 16px;
 }
 /******************************************************************************/
+/* Workspace header */
+.x-workspace-header {
+}
+/******************************************************************************/
 /* Workspace navigation toolbar */
 .x-workspace-navigation-toolbar {
 }
