Refactor session timeout database implementation.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -354,7 +354,8 @@
 		<sslport>443</sslport>
 		<forcesslonly>0</forcesslonly>
 		<sslcertificateref></sslcertificateref>
-		<timeout>5</timeout>
+		<timeoutenable>1</timeoutenable>
+		<timeoutseconds>300</timeoutseconds>
 	</webadmin>
 	<!-- Plugin configuration area -->
 	<services>
