--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
@@ -19,12 +19,14 @@
  * along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
  */
 
-/******************************************************************************/
-/* Corporate colors
-/* default:     #98b7cf
-/* darker:      #829bad
-/* more darker: #6c8191
-/******************************************************************************/
+ /******************************************************************************/
+ /* Corporate colors (http://paletton.com/#uid=13v0u0kjPPS8-YpePUsofKdt2CQ)
+ /* more lighter: #B9DFF8
+ /* lighter:      #85C3EC
+ /* default:      #5DACDF
+ /* darker:       #3B95CF
+ /* more darker:  #1B7BBA
+ /******************************************************************************/
 
 /******************************************************************************/
 /* Miscellaneous */
@@ -49,7 +51,7 @@ body > .x-mask {
 /******************************************************************************/
 /* Form fieldset */
 .x-fieldset-header-default > .x-fieldset-header-text {
-	color: #6c8191; /* more darker */
+	color: #1B7BBA; /* more darker */
 }
 /******************************************************************************/
 /* Trigger field */
@@ -71,7 +73,7 @@ body > .x-mask {
 	background-color: #ececec;
 }
 .x-form-trigger-wrap-default.x-form-trigger-wrap-focus {
-	border-color: #98b7cf;
+	border-color: #5DACDF;
 }
 .x-form-trigger-wrap-default.x-form-trigger-wrap-invalid {
 	border-color: #cc3300;
@@ -85,51 +87,51 @@ body > .x-mask {
 /******************************************************************************/
 /* Panel */
 .x-panel-default {
-	border-color: #98b7cf;
+	border-color: #5DACDF;
 }
 .x-panel-default-outer-border-l {
-	border-left-color: #98b7cf !important;
+	border-left-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-b {
-	border-bottom-color: #98b7cf !important;
+	border-bottom-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-trbl {
-	border-color: #98b7cf !important;
+	border-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-bl {
-	border-bottom-color: #98b7cf !important;
-	border-left-color: #98b7cf !important;
+	border-bottom-color: #5DACDF !important;
+	border-left-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-r {
-	border-right-color: #98b7cf !important;
+	border-right-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-rl {
-	border-right-color: #98b7cf !important;
-	border-left-color: #98b7cf !important;
+	border-right-color: #5DACDF !important;
+	border-left-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-rb {
-	border-right-color: #98b7cf !important;
-	border-bottom-color: #98b7cf !important;
+	border-right-color: #5DACDF !important;
+	border-bottom-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-trl {
-	border-top-color: #98b7cf !important;
-	border-right-color: #98b7cf !important;
-	border-left-color: #98b7cf !important;
+	border-top-color: #5DACDF !important;
+	border-right-color: #5DACDF !important;
+	border-left-color: #5DACDF !important;
 }
 .x-panel-default-outer-border-rbl {
-	border-right-color: #98b7cf !important;
-	border-bottom-color: #98b7cf !important;
-	border-left-color: #98b7cf !important;
+	border-right-color: #5DACDF !important;
+	border-bottom-color: #5DACDF !important;
+	border-left-color: #5DACDF !important;
 }
 .x-panel-header-default-vertical {
-	background-color: #98b7cf;
+	background-color: #5DACDF;
 }
 .x-panel-header-default .x-tool-tool-el {
-	background-color: #98b7cf;
+	background-color: #5DACDF;
 }
 .x-panel-header-default {
-	border: 1px solid #98b7cf;
-	background-color: #98b7cf;
+	border: 1px solid #5DACDF;
+	background-color: #5DACDF;
 }
 /******************************************************************************/
 /* Tree */
@@ -157,7 +159,7 @@ body > .x-mask {
 /******************************************************************************/
 /* Grid */
 .x-grid-item-focused .x-grid-cell-inner:before {
-	border-color: #98b7cf;
+	border-color: #5DACDF;
 }
 .x-grid-group-hd-collapsed .x-grid-group-title:before,
 .x-grid-group-hd-collapsible .x-grid-group-title:before {
@@ -207,56 +209,56 @@ body > .x-mask {
 /******************************************************************************/
 /* Tabs */
 .x-tab.x-tab-active.x-tab-default .x-tab-inner-default {
-	color: #98b7cf;
+	color: #5DACDF;
 }
 .x-tab-focus.x-tab-default {
-	outline: 1px solid #98b7cf;
+	outline: 1px solid #5DACDF;
 }
 .x-tab-invalid {
 	background-color: #cc3300;
 }
 .x-box-scroller-tab-bar-default {
-	background-color: #829bad; /* darker */
+	background-color: #3B95CF; /* darker */
 }
 /******************************************************************************/
 /* Windows */
 .x-window-default {
-	border-color: #6c8191; /* more darker */
+	border-color: #1B7BBA; /* more darker */
 	border-width: 1px;
 }
 .x-window-body-default {
-	border-color: #829bad !important; /* darker */
+	border-color: #3B95CF !important; /* darker */
 }
 .x-window-header-default {
-	border-color: #829bad; /* darker */
-	background-color: #829bad; /* darker */
+	border-color: #3B95CF; /* darker */
+	background-color: #3B95CF; /* darker */
 }
 .x-window-header-default .x-tool-img {
-	background-color: #829bad; /* darker */
+	background-color: #3B95CF; /* darker */
 }
 /******************************************************************************/
 /* Buttons */
 .x-btn-default-small {
-	border-color: #98b7cf;
-	background-color: #98b7cf;
+	border-color: #5DACDF;
+	background-color: #5DACDF;
 }
 .x-btn-focus.x-btn-default-small {
-	border-color: #98b7cf;
-	background-color: #98b7cf;
+	border-color: #5DACDF;
+	background-color: #5DACDF;
 }
 .x-btn-over.x-btn-default-small {
-	border-color: #829bad; /* darker */
-	background-color: #829bad; /* darker */
+	border-color: #3B95CF; /* darker */
+	background-color: #3B95CF; /* darker */
 }
 .x-btn.x-btn-pressed.x-btn-default-small,
 .x-btn.x-btn-disabled.x-btn-default-small {
-	border-color: #6c8191; /* more darker */
-	background-color: #6c8191; /* more darker */
+	border-color: #1B7BBA; /* more darker */
+	background-color: #1B7BBA; /* more darker */
 }
 /******************************************************************************/
 /* Checkbox */
 .x-form-checkbox-focus.x-form-checkbox-default {
-	color: #98b7cf;
+	color: #5DACDF;
 }
 .x-form-checkbox-default:before,
 .x-form-cb-checked .x-form-checkbox-default:before {
@@ -265,20 +267,20 @@ body > .x-mask {
 /******************************************************************************/
 /* Combobox */
 .x-boundlist-item-over {
-	background: #98b7cf;
-	border-color: #98b7cf;
+	background: #5DACDF;
+	border-color: #5DACDF;
 }
 .x-boundlist-selected {
-	background: #829bad; /* darker */
-	border-color: #829bad; /* darker */
+	background: #3B95CF; /* darker */
+	border-color: #3B95CF; /* darker */
 }
 /******************************************************************************/
 /* Menu */
 .x-menu-item-default.x-menu-item-focus,
 .x-menu-item-default.x-menu-item-active {
-	background-color: #98b7cf;
+	background-color: #5DACDF;
 }
 .x-menu-item-default-menubar.x-menu-item-focus,
 .x-menu-item-default-menubar.x-menu-item-active {
-	background-color: #98b7cf;
+	background-color: #5DACDF;
 }
