Add Material Design Icons (https://materialdesignicons.com). Note, the Material Design icons should only be used for the navigation tree icons, DO NOT USE them in other UI elements (this must be Font Awesome icons because the rest of the ExtJS theme is using them).
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -600,6 +600,24 @@ div#headerrlogo {
 	vertical-align: sub;
 }
 /******************************************************************************/
+/* Material Design Icons */
+.mdi {
+	color: #000000;
+}
+.x-workspace-node-tree .mdi,
+.x-workspace-navigation-toolbar .mdi {
+	font-size: 18px;
+}
+.x-workspace-node-view-category-items .thumb-icon.mdi {
+	font-size: 36px;
+	font-style: normal;
+	margin-bottom: 4px;
+}
+.x-workspace-node-view-category-items .thumb-icon.mdi:before {
+	vertical-align: sub;
+}
+
+/******************************************************************************/
 /* Bugfixes/Workarounds
 /******************************************************************************/
 /* Fix Chrome 56 render bug (EXTJS-23628) */
