--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -377,6 +377,9 @@ div#headerrlogo {
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 	opacity: 0.7;
 }
+.x-btn-icon-el.x-fa {
+	color: #000000;
+}
 .x-btn-icon-16x16 {
 	background-size: 16px 16px;
 }
@@ -443,6 +446,9 @@ div#headerrlogo {
 .x-menu-item-icon {
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 	opacity: 0.7;
+}
+.x-menu-item-icon.x-fa {
+	color: #000000;
 }
 .x-menu-item-icon-16x16 {
 	background-size: 16px 16px;
